thirdwave/src/sass/pages/_about.scss
@import "../abstracts/variables";
@import "../abstracts/mediaquery";

#parent {
  font-family: "Alexandria", sans-serif;
}

.about {
  width: 100vw;
  @include flexBox(row, center, center);
  @include respond(tab-land) {
    @include flexBox(column, center, center);
  }
  @include respond(tab-port) {
    @include flexBox(column, center, center);
  }
  @include respond(phone) {
    @include flexBox(column, center, center);
  }
}

.left-about {
  width: 30%;
  height: 100%;
  padding: 2rem;
  margin-left: 2rem;
  @include flexBox(column, center, flex-start);

  h1 {
    animation: moveInLeft 1s ease-out;

    @include respond(tab-land) {
      animation: moveInLeftPhones 1s ease-out;
    }
    @include respond(tab-port) {
      animation: moveInLeftPhones 1s ease-out;
    }
    @include respond(phone) {
      animation: moveInLeftPhones 1s ease-out;
    }
    @include respond(miniphone) {
      animation: moveInLeftPhones 1s ease-out;
    }
    @include respond(smallphone) {
      animation: moveInLeftPhones 1s ease-out;
    }
  }
  @include respond(tab-land) {
    height: 100%;
    width: 90%;
    padding-left: 0;
    padding-bottom: 0;
  }
  @include respond(tab-port) {
    height: 40%;
    width: 100%;
    display: block;
    padding-left: 0rem;
  }

  @include respond(phone) {
    height: 50%;
    width: 100%;
    display: block;
    padding-left: 0rem;
  }
  @include respond(smallphone) {
    height: 50%;
    width: 100%;
    display: block;
    padding: 0rem;
    margin: 0;
    text-align: center;
  }

  p {
    margin: 2rem auto;
    animation: moveInRight 1s ease-out;
    @include respond(tab-land) {
      animation: moveInRightPhones 1s ease-out;
    }
    @include respond(tab-port) {
      animation: moveInRightPhones 1s ease-out;
    }
    @include respond(phone) {
      animation: moveInRightPhones 1s ease-out;
    }
    @include respond(miniphone) {
      animation: moveInRightPhones 1s ease-out;
    }
    @include respond(smallphone) {
      animation: moveInRightPhones 1s ease-out;
    }
  }
}

.right-about {
  width: 70%;
  height: 100vh;
  @include flexBox(row, center, center);
  background: url("https://raw.githubusercontent.com/RealCodeMate/3rdWave/main/thirdwave/src/assets/profile-5.jpg") center center/cover no-repeat;
  clip-path: polygon(0 0, 100% 1%, 100% 100%, 28% 100%);
  @include respond(tab-land) {
    @include responsiveAboutPageImage(100vh);
  }
  @include respond(tab-port) {
    @include responsiveAboutPageImage(60vh);
  }

  @include respond(phone) {
    @include responsiveAboutPageImage(50vh);
    background: url("https://raw.githubusercontent.com/RealCodeMate/3rdWave/main/thirdwave/src/assets/profile-5.jpg")  center/cover no-repeat;
    background-position: 70% 0% ;
  }
}

@keyframes moveInLeft {
  0% {
    opacity: 0;
    transform: translateX(-100px);
  }
  80% {
    transform: translateX(10px);
  }
  100% {
    opacity: 1;
    transform: translate(0);
  }
}

@keyframes moveInLeftPhones {
  0% {
    opacity: 0;
    transform: translateX(-10px);
  }
  80% {
    transform: translateX(5px);
  }
  100% {
    opacity: 1;
    transform: translate(0);
  }
}

@keyframes moveInRight {
  0% {
    opacity: 0;
    transform: translateX(100px);
  }
  80% {
    transform: translateX(-10px);
  }
  100% {
    opacity: 1;
    transform: translate(0);
  }
}

@keyframes moveInRightPhones {
  0% {
    opacity: 0;
    transform: translateX(10px);
  }
  80% {
    transform: translateX(-5px);
  }
  100% {
    opacity: 1;
    transform: translate(0);
  }
}

